Switched to Spring-Boot 2.1.0.RELEASE and Java 11